fix icon alignment to be more visible on mobile

--- a/src/components/EventCard/EventCard.sass
+++ b/src/components/EventCard/EventCard.sass
@@ -24,8 +24,8 @@
     [astro-icon]
         display: inline
         position: relative
-        bottom: 10%
-        left: 50%
+        bottom: 30%
+        left: 30%
         width: 300px
         height: 300px
         opacity: 0.2
